2009-11-06  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Fix checking of access rights item editability.

2009-11-03  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	* lib/pytis/form/application.py:
	* lib/pytis/presentation/spec.py:
	Allow on_delete_record actions to perform regular deletions.
	

2009-11-03  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Direct editing of rights items in ApplicationMenuRightsFoldable.

2009-11-03  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	New method SideBrowseForm.main_form.

2009-11-03  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Make pytis_action_rights_foldable db function work even with NULL arguments.

2009-10-29  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Add mistakenly removed lines in menu.py.

2009-10-29  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Add role and column groupped subforms to the right editing form.

2009-10-28  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Use simplified rights in DMP menu views with respect to column rights.

2009-10-28  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Avoid duplicate menu entries when column rights are used.

2009-10-28  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/application.py:
	* lib/pytis/form/screen.py:
	Remove unused MItem argument `_rights'.

2009-10-28  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix column string in summary rights db tables.

2009-10-28  Milan Zamazal  <pdm@brailcom.org>

	* tools/dmp:
	Allow adding column rights in tools/dmp.

2009-10-28  Milan Zamazal  <pdm@brailcom.org>

	* tools/dmp:
	Don't print "Changes applied" on dry runs of tools/dmp.

2009-10-28  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* lib/pytis/presentation/field.py:
	Basic post-merge fixes in column access rights.

2009-06-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/types_.py: